fix: Correct gapping in main Introduction

--- a/assets/css/styles-index.css
+++ b/assets/css/styles-index.css
@@ -11,7 +11,7 @@
 
 	/* horz timeline
 	   ------------- */
-	--grid-auto-flow: column;
+	--timeline-grid-auto-flow: column;
 
 	--callout-line-border-left: dashed;
 
@@ -60,38 +60,24 @@
 
 	--timetick-odd-vert-shift-positive: calc(var(--timetick-height) + var(--cell-padding_size));
 	--timetick-odd-vert-shift: calc(var(--timetick-odd-vert-shift-positive) * -1);
+
+	/* youtube embed width="560" height="315" */
+	--video-aspect-ratio: calc(315 / 560);
+	--video-width: var(--content-half-width);
+	--video-height: calc(var(--video-width) * var(--video-aspect-ratio));
 }
 
 /* introduction */
 
-#intro-wrapper {
-	display: grid;
-	grid-template-columns: 66% 33%;
+#intro-video-right {	
+	float: right; 
+	width: var(--video-width);
+	height: var(--video-height); 
 }
-
-/* box1  box4 
-   box2  box4
-   box3  box3 */	
-#intro-box1 {
-    padding-top: var(--std-padding-vert);
-	grid-column-start: 1;
-	grid-column-end: 2;
-	margin-right: var(--std-padding-horz);
-}
-#intro-box4 {
-	grid-column-start: 2;
-	grid-column-end: 3;
-	grid-row-start: 1;
-	grid-row-end: 3;
-}
-#intro-box2  {
-	grid-column-start: 1;
-	grid-column-end: 2;
-}
-#intro-box3 {
-    padding-top: var(--std-padding-vert);
-	grid-column-start: 1;
-	grid-column-end: 3;
+#intro-video-bottom {
+	display: none;
+	width: var(--video-width);
+	height: var(--video-height); 
 }
 
 /* timeline based on https://codepen.io/joemaffei/pen/WNQKyPo from https://stackoverflow.com/a/61781360
@@ -112,7 +98,7 @@ dl {
 
 	grid-auto-columns: max-content;
 	grid-auto-rows: max-content;
-	grid-auto-flow: var(--grid-auto-flow);
+	grid-auto-flow: var(--timeline-grid-auto-flow);
 	grid-template-rows: auto auto;
 	grid-template-columns: auto auto;
 	justify-items: var(--cell-justify-items);
@@ -227,15 +213,14 @@ dl .cell:last-child {
 	 border-bottom-color: transparent;
 }
    
-/* YouTube video */
-/* https://embedresponsively.com/ */
 .embed-container { 
-	position: relative; 
-	padding-bottom: 56.25%; 
-	height: 0; 
+	padding-left: var(--std-padding-horz);
+	padding-bottom: var(--std-padding-vert); 
 	overflow: hidden; 
 	max-width: 100%; 
 } 
+/* YouTube video */
+/* https://embedresponsively.com/ */
 .embed-container iframe, .embed-container object, .embed-container embed { 
 	position: absolute; 
 	top: 0; 
@@ -265,28 +250,12 @@ dl .cell:last-child {
 }
 
 
-/* medium-large screens, 1100px wide or less */ 
-@media screen and (max-width: 1100px) {
-
-	#intro-wrapper {
-		grid-template-columns: 58% 42%;
-	}
-}
-
-/* medium-large screens, 1000px wide or less */ 
-@media screen and (max-width: 1000px) {
-
-	#intro-wrapper {
-		grid-template-columns: 50% 50%;
-	}
-}
-
 /* small-medium screens, 800px wide or less */ 
 @media screen and (max-width: 800px) {
 
 	:root {
 
-		--grid-auto-flow: row;
+		--timeline-grid-auto-flow: row;
 
 		/* horz timeline
 		   ------------- */
@@ -315,11 +284,6 @@ dl .cell:last-child {
 
 		--timeline-line-border-left: solid;
 		--timeline-line-border-right: solid;
-	}
-
-
-	#intro-wrapper {
-		grid-template-columns: 42% 58%;
 	}
 
 	/* don't display every third <br> */
@@ -375,60 +339,18 @@ dl .cell:last-child {
 }
 
 
-/* small-medium screens, 700px wide or less */ 
-@media screen and (max-width: 700px) {
-
-	/* box1  box4 
-       box2  box2
-	   box3  box3 */
-	#intro-box4 {
-		grid-column-start: 2;
-		grid-column-end: 3;
-		grid-row-start: 1;
-		grid-row-end: 2;
-	}
-	#intro-box2  {
-		grid-column-start: 1;
-		grid-column-end: 2;
-		grid-column-start: 1;
-		grid-column-end: 3;
-	}
-}
-
 /* small-medium screens, 600px wide or less */ 
 @media screen and (max-width: 600px) {
 
-	/* box1
-       box2
-	   box3
-	   box4 */
-	#intro-wrapper {
-		grid-template-columns: 1fr;
+	:root {
+		--video-width: var(--content-width);
 	}
 
-	#intro-box1 {
-		grid-column-start: 1;
-		grid-column-end: 2;
-		grid-row-start: 1;
-		grid-row-end: 2;
+	#intro-video-right {	
+		display: none;
 	}
-	#intro-box2 {
-		grid-column-start: 1;
-		grid-column-end: 2;
-		grid-row-start: 2;
-		grid-row-end: 3;
-	}
-	#intro-box3 {
-		grid-column-start: 1;
-		grid-column-end: 2;
-		grid-row-start: 3;
-		grid-row-end: 4;
-	}
-	#intro-box4 {
-		grid-column-start: 1;
-		grid-column-end: 2;
-		grid-row-start: 4;
-		grid-row-end: 5;
+	#intro-video-bottom {
+		display: block;
 	}
 }
 
